@@ -1,4 +1,7 @@
 $Rev$
+[2008/03/13]
+mScript.py          Fix script filename cannot be unicode(chinese) bug
+
 [2008/03/04]
 *                   Enhance on_modified process, improve the edit speed
 mShell.py           Strip leading space when doing "Run in Shell"
